feat: star rating
-Add logic to js to handle star rating. Display 1/2 or full star depending on which button is clicked. Also make sure the accurate number of stars are highlighted depending on the rating.

--- a/styles.css
+++ b/styles.css
@@ -28,8 +28,9 @@ body {
   opacity: 0;
   border: none;
   z-index: 1;
+  background-color: rgb(255, 191, 0);
 }
 
 .btn:hover {
-  opacity: 0.4;
+  opacity: 0.1;
 }
