feat: star rating preview
-Add logic to display temporary preview of new rating when user hovers over stars.

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,14 @@
 body {
   display: flex;
-  gap: 30px;
   flex-direction: row;
   position: absolute;
   top: 50%;
   left: 50%;
   translate: -50% -50%;
+}
+
+h1 {
+  margin-right: 20px;
 }
 
 .star {
@@ -28,9 +31,5 @@ body {
   opacity: 0;
   border: none;
   z-index: 1;
-  background-color: rgb(255, 191, 0);
 }
 
-.btn:hover {
-  opacity: 0.1;
-}
